<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/menu_search_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_counter"
        android:title="@string/menu_counter_title"
        app:actionLayout="@layout/counter_layout"
        app:showAsAction="always" />

</menu>